test/fixtures/map/source_map_throw_set_immediate.snapshot
*uglify-throw-original.js:*
  throw Error('goodbye');
  ^


Error: goodbye
    at *
    at *
    at *

Node.js *
